<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Moneytor</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="contact_thumbnail_description">Contact Thumnail</string>
    <string name="action_search">Search</string>
    <string name="title_activity_rule_editor_screen">Create Rule</string>
    <string name="identify_messages">Chose words that always appear in the messages you want to track and tap "next".</string>
    <string name="action_settings">Settings</string>
    <string name="action_create">Create</string>
    <string name="action_done">Done</string>
    <string name="title_activity_rule_test_screen">Test Rule</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_label">Moneytor</string>
    <string name="search_hint">Search Message</string>
    <string name="action_test_rule">Test</string>
    <string name="title_activity_rule_list_screen">RuleListScreen</string>
    <string name="title_activity_rule_settings_screen">RuleSettingsScreen</string>
    <string name="empty"></string>
    <string name="rule_name_field_hint">Rule Name</string>
    <string name="rule_compontents_label_hint">Rule components</string>
    <string name="action_save">Save</string>
    <string name="title_activity_expense_create_screen">ExpenseCreateScreen</string>
    <string name="default_amount">0.00</string>
    <string name="ok">OK</string>
    <string name="labels_input_hint">Coma separated labels</string>
    <string name="add_button_text">Add</string>
    <string name="expense_annotations_hint">Annotations</string>

</resources>
