<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.inpheller.moneytor.app.screen.rules.RuleSettingsScreen">

    <EditText
        android:id="@+id/rule_name_input"
        android:hint="@string/rule_name_field_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/rule_components"
        android:layout_below="@+id/rule_name_input"
        android:hint="@string/rule_compontents_label_hint"
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ListView
        android:id="@+id/rule_actions_list"
        android:layout_marginTop="15px"
        android:layout_below="@+id/rule_components"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"/>

</RelativeLayout>
