<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.inpheller.moneytor.app.screen.expense.ExpenseCreateScreen">

    <EditText
        android:id="@+id/amount_input"
        android:text="@string/default_amount"
        android:layout_toLeftOf="@+id/ok_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ok_button"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentRight="true"
        android:text="@string/ok"/>


    <EditText
        android:id="@+id/labels_input"
        android:hint="@string/labels_input_hint"
        android:layout_below="@+id/amount_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete|textCapWords"/>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_below="@id/labels_input"
        android:calendarViewShown="false"
        android:spinnersShown="true" />

    <FrameLayout
        android:id="@+id/footer_bar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_negative"
        android:layout_marginRight="@dimen/activity_horizontal_margin_negative">

        <Button
            android:id="@+id/add_button"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/add_button_text"
            />

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/datePicker"
        android:layout_above="@id/footer_bar"
        />


</RelativeLayout>
